--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -220,7 +220,7 @@
           <Font name="Segoe UI" size="48" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Autoganga"/>
+        <Property name="text" type="java.lang.String" value="Recomendador"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[750, 750]"/>
         </Property>
